디엑스포탈 작업

--- a/DX-Portal/works/html/COM-P-0005.html
+++ b/DX-Portal/works/html/COM-P-0005.html
@@ -9,16 +9,18 @@
 	<meta name="description" content="[DX Portal]">
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
-	<link rel="stylesheet" href="../js/lib/swiper.min.css">  
-	<link rel="stylesheet" href="../js/lib/sumoselect.min.css">
+	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
-	
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/lib/jquery.sumoselect.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper">
@@ -110,10 +112,10 @@
 				 <div class="side-wrap">
                     <div class="search-box"> 
                         <input type="text" placeholder="검색어를 입력하세요">
-                        <button type="button" class="btn-delete ico">삭제</button>
-                        <button type="button" class="btn-search">검색</button>
+                        <button type="button" class="bt-delete ico">삭제</button>
+                        <button type="button" class="bt-search">검색</button>
                     </div>
-                    <button type="button" class="btn-notice">알림</button>
+                    <button type="button" class="bt-notice">알림</button>
                     <p class="name-wrap"><span>김엘지</span>님</p>
 
 					<div class="notice-popcont">
