--- a/DX-Portal/works/html/IDX-0001.html
+++ b/DX-Portal/works/html/IDX-0001.html
@@ -12,14 +12,17 @@
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
     <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
 	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
 	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
 	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
     <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
 	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
+
 <body>
     <div class="wrapper">
 		<!-- header -->
@@ -162,6 +165,20 @@
                                     <div class="text-wrap"> 
                                         <mark>AIB</mark>
                                         <p>AIB : DX 전문가 시작하기</p>
+                                        <!--process-bar -->
+                                        <div class="process-bar">
+                                            <p>진척율 : <b>50.6</b>%</p>
+                                            <span style="width:60%;"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="in-box">
+                                    <div class="img-wrap">
+                                        <button type="button">강의 시청하기</button>
+                                    </div>
+                                    <div class="text-wrap"> 
+                                        <mark>기타 DX</mark>
+                                        <p>AIB : DX 전문가 시작하기AIB : DX 전문가 시작하기AIB : DX 전문가 시작하기AIB : DX 전문가 시작하기</p>
                                         <!--process-bar -->
                                         <div class="process-bar">
                                             <p>진척율 : <b>50.6</b>%</p>
@@ -349,7 +366,7 @@
                         </li>    
                     </ul>     
                 </div>
-                <a href="#none" class="btn-more">더보기</a>        
+                <a href="#none" class="bt-more">더보기</a>        
             </div>
             <div class="inner type02 dxguide-wrap">
                 <h2>DX 전문가 가이드 맵</h2> 
