--- a/DX-Portal/works/html/INQ-0002_modify.html
+++ b/DX-Portal/works/html/INQ-0002_modify.html
@@ -133,10 +133,16 @@
 					<div class="rowtable">
 						<table>
 							<colgroup>
-								<col style="width:15%">
-								<col style="width:85%">  
+								<col style="width:200px">
+								<col style="width:*"> 
 							</colgroup>
 							<tbody>
+								<tr> 
+									<th>과제등록 문의번호</th>
+									<td>
+										INQ2021110019
+									</td>
+								</tr>
 								<tr> 
 									<th>과제유형<strong class="required">*</strong></th>
 									<td>
@@ -150,10 +156,11 @@
 								<tr> 
 									<th>대상 본부/사업부/팀<strong class="required">*</strong></th>
 									<td>
-										<div class="td-search wid65">
-											<input type="text">	 
+										<div class="td-search widt65">
+											<input type="text" value="CPO.설비기술센터">	 
 											<button type="button" class="search">검색</button>
 										</div>
+										<p class="result-text">LG 에너지솔루션 / CPO / CPO.설비기술센터</p>
 									</td>
 								</tr>
 								<tr> 
@@ -169,8 +176,8 @@
 								<tr> 
 									<th>제목<strong class="required">*</strong></th>
 									<td>
-										<div class="input-wrap wid65">
-											<input type="text">
+										<div class="input-wrap widt65">
+											<input type="text" value="투자관리 시스템 데이터를 활용한 설비 변경 이력관리 System 구축">
 										</div>
 									</td>
 								</tr>
@@ -179,12 +186,12 @@
 									<td>
 										<div class="select-wrap wid31">
 											<select class="select"> 
-												<option value="">없음</option> 
+												<option value="">설비</option> 
 											</select>
 										</div>
 										<div class="select-wrap wid31">
 											<select class="select"> 
-												<option value="">없음</option> 
+												<option value="">예지보전</option> 
 											</select>
 										</div>  
 									</td>
@@ -194,15 +201,14 @@
 									<td>
 										<div class="select-wrap wid31">
 											<select class="select"> 
-												<option value="">없음</option> 
+												<option value="">LG 에너지솔루션</option> 
 											</select>
 										</div> 
 										<div class="select-wrap wid31">
 											<select class="select"> 
-												<option value="">없음</option> 
+												<option value="">김기석 책임 (kimkiseck) DX 추진팀</option> 
 											</select>
-										</div> 
-										<button type="button" class="bt-common">담당자 추가</button>
+										</div>  
 									</td>
 								</tr>
 								<tr> 
@@ -248,7 +254,8 @@
 					</div>
 					<div class="button-wrap"> 
 						<div class="right">
-							<button type="button" class="bt-red">등록</button> 
+							<button type="button" class="bt-redline">삭제</button>
+							<button type="button" class="bt-red">수정</button>
 							<a href="#none" class="bt-common">목록</a>
 						</div>
 					</div>  
