--- a/DX-Portal/works/html/INQ-P-0001.html
+++ b/DX-Portal/works/html/INQ-P-0001.html
@@ -10,12 +10,17 @@
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper"> 
@@ -60,6 +65,11 @@
 						</tbody>
 					</table>
 				</div>
+				<div class="button-wrap float"> 
+					<div class="right"> 
+						<a href="#none" class="bt-common">담당자 추가</a>
+					</div>
+				</div>   
 					
 				<h3>담당자 정보 목록</h3> 
 				<div class="tableList"> 
@@ -84,25 +94,25 @@
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">DX 추진팀</td>
-								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
+								<td><button type="button" class="bt-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">CPO.공정.지능화.제조DX.빅데이터분석P</td>
-								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
+								<td><button type="button" class="bt-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">CPO.공정.지능화.제조DX.빅데이터분석P</td>
-								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
+								<td><button type="button" class="bt-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">DX 추진팀</td>
-								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
+								<td><button type="button" class="bt-redline rounded delete">삭제</button></td> 
 							</tr>  
 						</tbody>
 					</table>
