--- a/DX-Portal/works/html/thumbnail.html
+++ b/DX-Portal/works/html/thumbnail.html
@@ -12,12 +12,14 @@
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
     <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
 	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
 	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
 	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
     <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
 	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
