--- a/DX-Portal/works/html/COM-P-0001.html
+++ b/DX-Portal/works/html/COM-P-0001.html
@@ -10,22 +10,27 @@
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper"> 
 	</div>
 	
-	<!--이름검색-->
+	<!--현업담당자 검색 팝업-->
 	<div class="modal">
 		<div class="modal-in xx-small">
 			<div class="menu-head">
-				<h2>이름 검색</h2>
+				<h2>현업담당자 검색</h2>
 			</div>
 			<div class="modal-body">
 				<div class="td-search type02">
