--- a/DX-Portal/works/html/COM-P-0008.html
+++ b/DX-Portal/works/html/COM-P-0008.html
@@ -10,12 +10,17 @@
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper"> 
@@ -29,7 +34,7 @@
 			</div>
 			<div class="modal-body"> 
 				<div class="scroll"> 
-					<div class="tableList"> 
+					<div class="tableList tag-list"> 
 						<table>
 							<caption></caption>
 							<colgroup>
@@ -68,7 +73,7 @@
 						</table>
 					</div>
 
-					<div class="tableList"> 
+					<div class="tableList tag-list"> 
 						<table>
 							<caption></caption>
 							<colgroup> 
