--- a/DX-Portal/works/html/INQ-0002_detail.html
+++ b/DX-Portal/works/html/INQ-0002_detail.html
@@ -10,12 +10,17 @@
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
+    <link rel="stylesheet" href="../js/lib/sumoselect.min.css">
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery.sumoselect.min.js"></script> 
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper">
@@ -107,10 +112,10 @@
 				 <div class="side-wrap">
                     <div class="search-box"> 
                         <input type="text" placeholder="검색어를 입력하세요">
-                        <button type="button" class="btn-delete ico">삭제</button>
-                        <button type="button" class="btn-search">검색</button>
+                        <button type="button" class="bt-delete ico">삭제</button>
+                        <button type="button" class="bt-search">검색</button>
                     </div>
-                    <button type="button" class="btn-notice">알림</button>
+                    <button type="button" class="bt-notice">알림</button>
                     <p class="name-wrap"><span>김엘지</span>님</p>
                 </div>
 			</div> 
@@ -124,153 +129,151 @@
 					<h3>기본정보</h3>
 					<p class="required-text">
 						<strong>*</strong>항목은 필수입력 항목입니다. 
-					</p>
-					<div class="table-wrap">
-						<div class="rowtable">
-							<table>
-								<colgroup>
-									<col style="width:200px">
-									<col style="width:*"> 
-								</colgroup>
-								<tbody>
-									<tr> 
-										<th>과제등록 문의번호</th>
-										<td>
-											INQ2021110019
-										</td>
-									</tr>
-									<tr> 
-										<th>과제유형<strong class="required">*</strong></th>
-										<td>
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">AIB</option> 
-												</select>
-											</div> 
-										</td>
-									</tr>
-									<tr> 
-										<th>대상 본부/사업부/팀<strong class="required">*</strong></th>
-										<td>
-											<div class="td-search widt65">
-												<input type="text" value="CPO.설비기술센터">	 
-												<button type="button" class="search">검색</button>
-											</div>
-											<p class="result-text">LG 에너지솔루션 / CPO / CPO.설비기술센터</p>
-										</td>
-									</tr>
-									<tr> 
-										<th>사업장<strong class="required">*</strong></th>
-										<td>
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">본사</option> 
-												</select>
-											</div> 
-										</td>
-									</tr>
-									<tr> 
-										<th>제목<strong class="required">*</strong></th>
-										<td>
-											<div class="input-wrap widt65">
-												<input type="text" value="투자관리 시스템 데이터를 활용한 설비 변경 이력관리 System 구축">
-											</div>
-										</td>
-									</tr>
-									<tr> 
-										<th>과제 문의영역<strong class="required">*</strong></th>
-										<td>
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">설비</option> 
-												</select>
-											</div>
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">예지보전</option> 
-												</select>
-											</div>  
-										</td>
-									</tr>
-									<tr> 
-										<th>협의 부서/담당자 정보<strong class="required">*</strong></th>
-										<td>
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">LG 에너지솔루션</option> 
-												</select>
-											</div> 
-											<div class="select-wrap wid31">
-												<select class="select"> 
-													<option value="">김기석 책임 (kimkiseck) DX 추진팀</option> 
-												</select>
-											</div>
-											<button type="button" class="btn-common">담당자 추가</button>  
-										</td>
-									</tr>
-									<tr> 
-										<th>과제 문의 내용<strong class="required">*</strong></th>
-										<td><!--상세페이지 클래스 삭제 -->
-											1. 과제 목표<br>
-												입력한 내용 표시<br>
-											2. 과제 내용 및 등록 사유<br>
-												입력한 내용 표시<br>
-											3. 과제수행 일정
+					</p> 
+					<div class="rowtable">
+						<table>
+							<colgroup>
+								<col style="width:200px">
+								<col style="width:*"> 
+							</colgroup>
+							<tbody>
+								<tr> 
+									<th>과제등록 문의번호</th>
+									<td>
+										INQ2021110019
+									</td>
+								</tr>
+								<tr> 
+									<th>과제유형<strong class="required">*</strong></th>
+									<td>
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">AIB</option> 
+											</select>
+										</div> 
+									</td>
+								</tr>
+								<tr> 
+									<th>대상 본부/사업부/팀<strong class="required">*</strong></th>
+									<td>
+										<div class="td-search widt65">
+											<input type="text" value="CPO.설비기술센터">	 
+											<button type="button" class="search">검색</button>
+										</div>
+										<p class="result-text">LG 에너지솔루션 / CPO / CPO.설비기술센터</p>
+									</td>
+								</tr>
+								<tr> 
+									<th>사업장<strong class="required">*</strong></th>
+									<td>
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">본사</option> 
+											</select>
+										</div> 
+									</td>
+								</tr>
+								<tr> 
+									<th>제목<strong class="required">*</strong></th>
+									<td>
+										<div class="input-wrap widt65">
+											<input type="text" value="투자관리 시스템 데이터를 활용한 설비 변경 이력관리 System 구축">
+										</div>
+									</td>
+								</tr>
+								<tr> 
+									<th>과제 문의영역<strong class="required">*</strong></th>
+									<td>
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">설비</option> 
+											</select>
+										</div>
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">예지보전</option> 
+											</select>
+										</div>  
+									</td>
+								</tr>
+								<tr> 
+									<th>협의 부서/담당자 정보<strong class="required">*</strong></th>
+									<td>
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">LG 에너지솔루션</option> 
+											</select>
+										</div> 
+										<div class="select-wrap wid31">
+											<select class="select"> 
+												<option value="">김기석 책임 (kimkiseck) DX 추진팀</option> 
+											</select>
+										</div>
+										<button type="button" class="bt-common">담당자 추가</button>  
+									</td>
+								</tr>
+								<tr> 
+									<th>과제 문의 내용<strong class="required">*</strong></th>
+									<td><!--상세페이지 클래스 삭제 -->
+										1. 과제 목표<br>
+											입력한 내용 표시<br>
+										2. 과제 내용 및 등록 사유<br>
+											입력한 내용 표시<br>
+										3. 과제수행 일정
 
-												입력한 내용 표시
-										</td>
-									</tr>
-									<tr> 
-										<th>데이터 샘플 첨부파일</th>
-										<td> 
-											 
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-
-						<div class="h-title-wrap">
-							<h3>인터뷰 목록</h3>
-							<button type="button" class="bt-redline">인터뷰 등록</button>
-						</div>
-
-						<div class="tableList"> 
-							<table>
-								<caption></caption>
-								<colgroup>
-									<col style="width:10%">
-									<col style="width:20%">
-									<col style="width:25%">
-									<col style="width:25%">
-									<col style="width:20%"> 
-								</colgroup>
-								<thead>
-									<tr>
-										<th scope="col">No</th>
-										<th scope="col">인터뷰 일시</th>
-										<th scope="col">인터뷰 장소</th>
-										<th scope="col">인터뷰 대상자</th>
-										<th scope="col">다운로드</th> 
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-									 	<td colspan="5">인터뷰가 없습니다.</td> 
-									</tr> 
-								</tbody>
-							</table>
-						</div> 
-						<p class="req-text">※ 목록을 누르면 인터뷰를 수정하실 수 있습니다.</p>
-						<div class="button-wrap list-foot"> 
-							<div class="right">
-								<button type="button" class="bt-red">승인</button>
-								<button type="button" class="bt-redline">반려</button>
-								<button type="button" class="bt-redline">삭제</button>
-								<a href="#none" class="bt-common">목록</a>
-							</div>
-						</div> 
+											입력한 내용 표시
+									</td>
+								</tr>
+								<tr> 
+									<th>데이터 샘플 첨부파일</th>
+									<td> 
+											
+									</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
+
+					<div class="h-title-wrap">
+						<h3>인터뷰 목록</h3>
+						<button type="button" class="bt-redline">인터뷰 등록</button>
+					</div>
+
+					<div class="tableList"> 
+						<table>
+							<caption></caption>
+							<colgroup>
+								<col style="width:10%">
+								<col style="width:20%">
+								<col style="width:25%">
+								<col style="width:25%">
+								<col style="width:20%"> 
+							</colgroup>
+							<thead>
+								<tr>
+									<th scope="col">No</th>
+									<th scope="col">인터뷰 일시</th>
+									<th scope="col">인터뷰 장소</th>
+									<th scope="col">인터뷰 대상자</th>
+									<th scope="col">다운로드</th> 
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td colspan="5">인터뷰가 없습니다.</td> 
+								</tr> 
+							</tbody>
+						</table>
+					</div> 
+					<p class="req-text">※ 목록을 누르면 인터뷰를 수정하실 수 있습니다.</p>
+					<div class="button-wrap list-foot"> 
+						<div class="right">
+							<button type="button" class="bt-red">승인</button>
+							<button type="button" class="bt-redline">반려</button>
+							<button type="button" class="bt-redline">삭제</button>
+							<a href="#none" class="bt-common">목록</a>
+						</div>
+					</div>  
 				</div> 
 			</div> 
         </section>
