디엑스 작업

--- a/DX-Portal/works/html/PRJ-0002.html
+++ b/DX-Portal/works/html/PRJ-0002.html
@@ -434,25 +434,100 @@
 									<th class="first">① 계획서 등록</th>
 									<th>과제 계획서</th>
 									<td>
-										 디자인 	
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
+									</td> 
+								</tr>
+								<tr> 
+									<th class="first">② 데이터 수집</th>
+									<th>데이터 정의서</th>
+									<td>
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
+									</td> 
+								</tr>
+								<tr> 
+									<th class="first" rowspan="2">③ 1차 리뷰</th>
+									<th>중간 보고서</th>
+									<td>
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
+									</td> 
+								</tr>
+								<tr>  
+									<th>1차 리뷰 회의록</th>
+									<td>
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
+									</td> 
+								</tr>
+								<tr> 
+									<th class="first" rowspan="2">④ 2차 리뷰</th>
+									<th>분석 모델 보고서</th>
+									<td>
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
+									</td> 
+								</tr>
+								<tr>  
+									<th>2차 리뷰 회의록</th>
+									<td>
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div> 
 									</td> 
 								</tr>
 								<tr> 
 									<th class="first" rowspan="4">⑤ 최종 보고</th>
 									<th>최종 결과 보고서</th>
 									<td>
-										 디자인 	
+										 <div class="input-wrap dis-block">
+											<input type="text" class="wid60p">	
+											<button type="button" class="bt-common">찾아보기</button>
+											<button type="button" class="bt-common">삭제</button>
+											<button type="button" class="bt-common">다운로드</button>
+											<button type="button" class="bt-common">문서 열기</button>	  
+										</div>  	
 									</td> 
 								</tr>
 								<tr>  
 									<th>최종 분석 코딩 등록</th>
 									<td>
 										 <div class="file-upload">
-											<input type="text" placeholder="파일을 선택하세요.">
+											<input type="text" placeholder="파일을 선택하세요." class="wid60p">
 											<button type="button" class="bt-common">찾아보기</button>
 											<button type="button" class="bt-common">등록</button>	
 										</div> 
-										<div class="process-wrap">
+										<div class="process-wrap widtype">
 											<p>
 												<span>업로드 대기중</span>
 												<em>80%</em>
@@ -521,6 +596,7 @@
 							</tbody>
 						</table>
 					</div>
+					
 					<p class="req-text">※ 결재라인 지정은<em> <a href="#none">"커뮤니티-FAQ-결재라인 가이드"</a></em>를 참고하시기 바랍니다.</p>
 					<div class="button-wrap list-foot"> 
 						<div class="right"> 
